Add more charts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <app-navbar></app-navbar>
-<div>
-  <app-timeline></app-timeline>
-  <app-chart></app-chart>
-</div>
+<router-outlet></router-outlet>
