--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,20 @@
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
+    <span>Charts</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
+    <button routerLink="/timeline" mat-icon-button class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon">
+      <mat-icon>line_style</mat-icon>
     </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <button routerLink="line-chart" mat-icon-button class="example-icon"
+      aria-label="Example icon-button with share icon">
+      <mat-icon>timeline</mat-icon>
+    </button>
+    <button routerLink="issue-chart" mat-icon-button class="example-icon"
+      aria-label="Example icon-button with share icon">
+      <mat-icon>short_text
+      </mat-icon>
+    </button>
+    <button routerLink="e-chart" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>bar_chart</mat-icon>
     </button>
   </mat-toolbar>
-
-
